<?xml version='1.0' encoding='UTF-8'?>
<resources>
    <string name="welcome">欢迎!</string>
    <string name="touch">点击开始</string>
    <string name="language">语言</string>
    <string name="wait">请稍等...</string>
    <string name="website">www.bitocean.com</string>
    <string name="lock_dtm">DTM 停止服务!</string>
    <string name="network_error">网络错误,请检查网络!</string>
    <string name="currency_fail">设备法币与服务不一致</string>
    <string name="rate_fail">无法获取汇率,请检查网络!</string>
    <string name="cancel">取消</string>
    <string name="next">下一项</string>
    <string name="buy_btn">买入</string>
    <string name="sell_btn">卖出</string>
    <string name="ok">确认</string>
    <string name="photo">拍照</string>
    <string name="buy">买</string>
    <string name="sell">卖</string>
    <string name="back">回退</string>
    <string name="out">退出</string>
    <string name="confirm">确认</string>
    <string name="login">登录</string>
    <string name="logout">登出</string>
    <string name="scan">扫描</string>
    <string name="unit_bit">BTC</string>
    <string name="unit_mbit">mBTC</string>

    <string name="wifi_prompt">设备设置</string>
    <string name="wifi_default">请设置无线网络</string>
    <string name="wifi_set_btn">无线网络</string>
    <string name="date_set_btn">日期</string>

    <string name="administrator">管理员</string>
    <string name="admin_prompt">管理员登录</string>
    <string name="admin_name">管理员名称:</string>
    <string name="admin_password">管理员密码:</string>
    <string name="admin_name_error">请输入名称</string>
    <string name="admin_password_error">请输入密码</string>
    <string name="admin_login_fail_1">管理员账户不存在</string>
    <string name="admin_login_fail_2">管理员密码错误</string>
    <string name="admin_login_fail_3">管理员账户未绑定当前设备</string>

    <string name="key_prompt">管理员信息</string>
    <string name="device_public_key">设备绑定公钥:</string>
    <string name="public_key">公钥:</string>
    <string name="lock">锁定设备</string>
    <string name="unlock">解锁设备</string>
    <string name="download">下载</string>
    <string name="dtm_state_lock">DTM设备状态:</string>
    <string name="update">更新状态:</string>
    <string name="update_btn">更新</string>
    <string name="incash_btn">入钞状态</string>
    <string name="outcash_btn">出钞状态</string>
    <string name="device_btn">设备状态</string>

    <string name="trade_mode">交易</string>
    <string name="buy_prompt">购买</string>
    <string name="currency_prompt">输入交易金额</string>
    <string name="buy_qr_prompt">二维码购买</string>
    <string name="buy_pw_prompt">购买纸钱包</string>
    <string name="sell_prompt">卖出</string>
    <string name="redeem_prompt">赎回</string>

    <string name="check_redeem_code">请扫描赎回二维码</string>
    <string name="redeem_flow_display">赎回操作示意图</string>
    <string name="redeem_flow_display_1">请扫描您的赎回二维码</string>
    <string name="redeem_flow_display_2">交易完成</string>
    <string name="redeem_fail_1">赎回二维码不存在</string>
    <string name="redeem_fail_2">当前赎回二维码以完成赎回</string>
    <string name="redeem_fail_3">设备币种不支持当前赎回二维码</string>
    <string name="redeem_confirm_text">当前交易赎回金额</string>
    <string name="redeem_scan_1">打开设备扫描</string>
    <string name="redeem_scan_2">放入屏幕下方的扫描区域</string>
    <string name="redeem_scan_3">放入赎回二维码</string>

    <string name="user_login_prompt">用户登录</string>
    <string name="user_name">用户名:</string>
    <string name="user_password">密码:</string>
    <string name="user_login_fail_1">用户名错误</string>
    <string name="user_login_fail_2">密码错误</string>
    <string name="user_login_fail_3">该用户停止服务,请咨询客服!</string>
    <string name="login_success">登录成功</string>
    <string name="logout_success">登出成功</string>

    <string name="register">注册</string>
    <string name="register_photo_prompt">头像拍照</string>
    <string name="register_passport_prompt">证件拍照</string>
    <string name="register_phone_prompt">用户注册</string>
    <string name="register_get_verify">验证码</string>
    <string name="register_phone_num">手机:</string>
    <string name="register_success">等待注册成功短信后即可登录</string>
    <string name="register_phone_error">请输入手机号</string>
    <string name="register_passport_error">请拍摄你的证件</string>
    <string name="register_photo_error">请拍照</string>
    <string name="register_fail_1">用户名已存在</string>
    <string name="register_fail_2">用户KYC失败</string>
    <string name="register_fail_3">用户注册失败</string>
    <string name="register_kyc">注册KYC</string>
    <string name="register_kyc_info">符合DTM当地法律规定,请注册KYC</string>
    <string name="send_verify_success">申请验证码成功,请等待</string>
    <string name="phone_set">请输入手机联系方式</string>
    <string name="verify_set">请输入验证码</string>


    <string name="key_scan_1">打开设备扫描</string>
    <string name="key_scan_2">放入屏幕下方的扫描区域</string>
    <string name="key_scan_3">放入需要扫描的二维码</string>
    <string name="check_scan_user_public_key">请检查是否扫描公钥</string>
    <string name="scan_user_key_prompt">扫描公钥</string>
    <string name="scan_text">请对准二维码扫描</string>
    <string name="scan_error">扫描错误,请重试</string>

    <string name="photo_scan_1">打开设备拍照</string>
    <string name="photo_scan_2">对准屏幕上方的摄像头</string>
    <string name="photo_scan_3">点击拍照</string>
    <string name="photo_scan_4">对准屏幕下方的摄像头</string>

    <string name="sell_flow_display">卖币操作示意图</string>
    <string name="sell_qr_code">卖币二维码</string>
    <string name="sell_flow_display_1">请扫描您的公钥</string>
    <string name="sell_flow_display_2">输入兑换金额</string>
    <string name="sell_flow_display_3">请扫描卖币二维码</string>
    <string name="sell_flow_display_4">交易完成,请等待出钞</string>
    <string name="sell_qr_code_error_1">公钥错误,无法生成卖币二维码</string>
    <string name="sell_qr_code_error_2">获取卖币二维码失败</string>
    <string name="sell_qr_code_flow_prompt">请扫描卖币二维码并完成卖币交易，等待交易结果</string>
    <string name="sell_qr_code_large_prompt">本次交易为大额,确认交易后将会打印出赎回二维码,领取后请等待15分钟后领取现金</string>
    <string name="sell_wait">请等待服务确认交易成功</string>
    <string name="sell_trans_error_1">交易单未确认,请咨询客服</string>
    <string name="sell_trans_error_2">交易未完成,请咨询客服</string>
    <string name="sell_trans_error_3">交易金额小于设定值,交易失败,虚拟币返回原账户</string>

    <string name="buy_qr_flow_display">二维码买币操作示意图</string>
    <string name="buy_qr_flow_display_1">请扫描您的公钥</string>
    <string name="buy_qr_flow_display_2">输入兑换金额</string>
    <string name="buy_qr_flow_display_3">入钞</string>
    <string name="buy_qr_flow_display_4">交易完成,请等待广播</string>
    <string name="buy_fail_reason_1">兑换币不足,请咨询客服</string>
    <string name="buy_fail_reason_2">购买失败</string>

    <string name="buy_wallet_flow_display">纸钱包买币操作示意图</string>
    <string name="buy_wallet_flow_display_1">输入兑换金额</string>
    <string name="buy_wallet_flow_display_2">入钞</string>
    <string name="buy_wallet_flow_display_3">交易完成,请等待广播</string>
    <string name="buy_pay_confirm_prompt">请确认入钞后本次交易不可回退</string>
    <string name="buy_pay_confirm_notes">交易汇率已实际价格为准</string>
    <string name="buy_bill_prompt">入钞</string>
    <string name="buy_currency_note">本次交易法币金额:</string>
    <string name="buy_bit_note">本次交易虚拟币金额:</string>
    <string name="buy_cash_note">投入交易金额:</string>

    <string name="exchange_sum">输入交易金额</string>
    <string name="complete_trans">交易完成</string>
    <string name="max_num">本次可交易最大金额</string>
    <string name="min_num">本次可交易最小金额</string>

    <string name="print_title">比特海洋</string>
    <string name="print_dtm_slip">自动柜员机客户凭条</string>
    <string name="print_date_time">日期及时间:</string>
    <string name="print_trans_type">交易类型:</string>
    <string name="print_trans_method">交易方式:</string>
    <string name="print_buy_coin">买币</string>
    <string name="print_sell_coin">卖币</string>
    <string name="print_phone_wallet">手机钱包</string>
    <string name="print_paper_wallet">纸钱包</string>
    <string name="print_buy_bitcoin_num">购买比特币数量:</string>
    <string name="print_sell_bitcoin_num">卖出比特币数量:</string>
    <string name="print_trans_currency_num">交易金额:</string>
    <string name="print_hot_line">客服热线:</string>
    <string name="print_welcome_again">欢迎您再次使用</string>
    <string name="print_trans_fail">交易失败</string>
    <string name="print_line_service">请联系客服热线</string>
    <string name="print_wait_15_min">请等待15分钟后领取现金</string>
    <string name="print_redeem_code">提款二维码:</string>
    <string name="print_public_key">公钥:</string>
    <string name="print_private_key">私钥:</string>

    <string name="error_login">登录失败,请重试</string>
    <string name="error_redeem">获取赎回金额失败,请联系客服</string>
    <string name="error_sell_buy">交易错误,请联系客服</string>
    <string name="error_verify">获取验证码失败,请重试</string>
    <string name="error_register">注册失败,请重试</string>
</resources>
