<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/layout_width"
    android:layout_height="@dimen/layout_height"
    android:background="@drawable/background">

    <include
        android:id="@+id/logo"
        layout="@layout/view_title_image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_logo_layout"
        android:layout_alignParentTop="true" />

    <include
        android:id="@+id/title_text"
        layout="@layout/view_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo" />

    <Button
        android:id="@+id/buy_btn"
        android:layout_width="@dimen/width_button"
        android:layout_height="@dimen/height_button"
        android:layout_marginLeft="@dimen/content_left_distance"
        android:layout_marginTop="20px"
        android:layout_below="@+id/title_text"
        android:background="@drawable/btn"
        android:padding="0dp"
        android:textColor="@color/bright"
        android:text="@string/buy_tran_btn"
        android:textSize="@dimen/text_normal_size" />

    <Button
        android:id="@+id/sell_btn"
        android:layout_width="@dimen/width_button"
        android:layout_height="@dimen/height_button"
        android:layout_marginLeft="20px"
        android:layout_marginTop="20px"
        android:layout_toRightOf="@+id/buy_btn"
        android:layout_below="@+id/title_text"
        android:background="@drawable/btn"
        android:padding="0dp"
        android:textColor="@color/bright"
        android:text="@string/sell_tran_btn"
        android:textSize="@dimen/text_normal_size" />

    <Button
        android:id="@+id/incash_btn"
        android:layout_width="@dimen/width_button"
        android:layout_height="@dimen/height_button"
        android:layout_marginTop="20px"
        android:layout_toRightOf="@+id/sell_btn"
        android:layout_below="@+id/title_text"
        android:background="@drawable/btn"
        android:padding="0dp"
        android:textColor="@color/bright"
        android:text="@string/incash_btn"
        android:textSize="@dimen/text_normal_size" />

    <Button
        android:id="@+id/outcash_btn"
        android:layout_width="@dimen/width_button"
        android:layout_height="@dimen/height_button"
        android:layout_marginLeft="20px"
        android:layout_marginTop="20px"
        android:layout_toRightOf="@+id/incash_btn"
        android:layout_below="@+id/title_text"
        android:background="@drawable/btn"
        android:padding="0dp"
        android:textColor="@color/bright"
        android:text="@string/outcash_btn"
        android:textSize="@dimen/text_normal_size" />

    <Button
        android:id="@+id/device_btn"
        android:layout_width="@dimen/width_button"
        android:layout_height="@dimen/height_button"
        android:layout_marginLeft="20px"
        android:layout_marginTop="20px"
        android:layout_toRightOf="@+id/outcash_btn"
        android:layout_below="@+id/title_text"
        android:background="@drawable/btn"
        android:padding="0dp"
        android:textColor="@color/bright"
        android:text="@string/device_btn"
        android:textSize="@dimen/text_normal_size" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_button"
        android:layout_below="@+id/buy_btn"
        android:layout_marginTop="@dimen/height_layout_top">

        <RelativeLayout
            android:id="@+id/key_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/key_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/content_left_distance"
                android:text="@string/device_public_key"
                android:textColor="@color/white"
                android:textSize="@dimen/text_large_size" />

            <TextView
                android:id="@+id/key_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20px"
                android:layout_toRightOf="@+id/key_title"
                android:text="@string/welcome"
                android:textColor="@color/white"
                android:textSize="@dimen/text_large_size" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/lock_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/key_layout"
            android:layout_marginTop="50px"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/lock_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/content_left_distance"
                android:text="@string/dtm_state_lock"
                android:textColor="@color/white"
                android:textSize="@dimen/text_large_size" />

            <Button
                android:id="@+id/lock_btn"
                android:layout_width="@dimen/width_button"
                android:layout_height="@dimen/height_button"
                android:layout_marginLeft="20px"
                android:layout_toRightOf="@+id/lock_title"
                android:background="@drawable/btn"
                android:padding="0dp"
                android:textColor="@color/bright"
                android:textSize="@dimen/text_normal_size" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/update_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lock_layout"
            android:layout_marginTop="50px">

            <TextView
                android:id="@+id/update_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/content_left_distance"
                android:text="@string/update"
                android:textColor="@color/white"
                android:textSize="@dimen/text_large_size" />

            <TextView
                android:id="@+id/update_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_toLeftOf="@+id/update_btn"
                android:layout_toRightOf="@+id/update_title"
                android:text="@string/welcome"
                android:textColor="@color/white"
                android:textSize="@dimen/text_large_size" />

            <Button
                android:id="@+id/update_btn"
                android:layout_width="@dimen/width_button"
                android:layout_height="@dimen/height_button"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/button_left_distance"
                android:background="@drawable/btn"
                android:padding="0dp"
                android:text="@string/update_btn"
                android:textColor="@color/bright"
                android:textSize="@dimen/text_normal_size" />
        </RelativeLayout>

    </RelativeLayout>

    <include
        android:id="@+id/bottom_button"
        layout="@layout/view_bottom_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_bottom_button_layout"
        android:layout_above="@+id/bottom_text" />

    <include
        android:id="@+id/bottom_text"
        layout="@layout/view_bottom_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_bottom_text_layout"
        android:layout_alignParentBottom="true" />

</RelativeLayout>