<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/layout_width"
    android:layout_height="@dimen/layout_height"
    android:background="@drawable/background">

    <include
        android:id="@+id/logo"
        layout="@layout/view_title_image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_logo_layout"
        android:layout_alignParentTop="true" />

    <include
        android:id="@+id/title_text"
        layout="@layout/view_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_button"
        android:layout_below="@+id/title_text"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/height_layout_top">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="120px"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/buy_mode_btn"
                android:layout_width="@dimen/icon_btn_width"
                android:layout_height="@dimen/icon_btn_height"
                android:layout_centerVertical="true"
                android:background="@drawable/buy"
                android:padding="0dp" />

            <TextView
                android:layout_width="@dimen/icon_btn_width"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="20px"
                android:gravity="center_horizontal"
                android:text="@string/buy_prompt"
                android:textColor="@color/white"
                android:textSize="@dimen/text_large_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/sell_mode_btn"
                android:layout_width="@dimen/icon_btn_width"
                android:layout_height="@dimen/icon_btn_height"
                android:layout_centerVertical="true"
                android:background="@drawable/sell"
                android:padding="0dp" />

            <TextView
                android:layout_width="@dimen/icon_btn_width"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="20px"
                android:gravity="center_horizontal"
                android:text="@string/sell_prompt"
                android:textColor="@color/white"
                android:textSize="@dimen/text_large_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="120px"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/redeem_mode_btn"
                android:layout_width="@dimen/icon_btn_width"
                android:layout_height="@dimen/icon_btn_height"
                android:layout_centerVertical="true"
                android:background="@drawable/redeem"
                android:padding="0dp" />

            <TextView
                android:layout_width="@dimen/icon_btn_width"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="20px"
                android:gravity="center_horizontal"
                android:text="@string/redeem_prompt"
                android:textColor="@color/white"
                android:textSize="@dimen/text_large_size" />
        </LinearLayout>
    </RelativeLayout>

    <include
        android:id="@+id/bottom_button"
        layout="@layout/view_bottom_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_bottom_button_layout"
        android:layout_above="@+id/bottom_text" />

    <include
        android:id="@+id/bottom_text"
        layout="@layout/view_bottom_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_bottom_text_layout"
        android:layout_alignParentBottom="true" />

</RelativeLayout>